# mm-bluelightv1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  config.sample.json  firmware.ino  partitions.csv  sdkconfig  sdkconfig.old
component/ntshell/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.cc  main.cpp
src/: config.cc  config.cpp  config.h  config.hpp  core.h  log.h  logger.h  main.cpp  message.h  motion.cc  motion.cpp  motion.h  odometry.cc  odometry.h  pid.h  priority.h  run.cc  run.h  sensor.cc  sensor.cpp  sensor.h  sensor.hpp  shell.cpp  task.h  task.hpp  ui.cc  ui.h
src/data/: average.h  average.hpp  pid.h  pid.hpp  ringbuffer.h  ringbuffer.hpp
src/driver/: adc.cpp  adc.h  battery.cpp  battery.h  battery.hpp  buzzer.cpp  buzzer.h  buzzer.hpp  driver.cc  driver.cpp  driver.h  driver.hpp  encoder.cpp  encoder.h  encoder.hpp  flash.cpp  flash.h  fs.cpp  fs.h  imu.cpp  imu.h  indicator.cpp  indicator.h  motor.cpp  motor.h  photo.cpp  photo.h  speaker.cpp  speaker.h
src/driver/hardware/: base.h  base.hpp  battery.cc  battery.cpp  battery.h  battery.hpp  buzzer.cc  buzzer.cpp  buzzer.h  buzzer.hpp  encoder.cc  encoder.cpp  encoder.h  encoder.hpp  fs.cc  fs.cpp  fs.h  fs.hpp  imu.cc  imu.cpp  imu.h  imu.hpp  indicator.cc  indicator.cpp  indicator.h  indicator.hpp  motor.cc  motor.cpp  motor.h  motor.hpp  photo.cc  photo.cpp  photo.h  photo.hpp  uart.cc  uart.h
src/driver/peripherals/: adc.cc  adc.cpp  adc.hpp  gpio.cc  gpio.cpp  gpio.h  gpio.hpp  rmt.cpp  rmt.hpp  spi.cc  spi.cpp  spi.h  spi.hpp
src/driver/system/: console.cc  console.h  fs.cc  fs.h
src/filter/: pid.hpp
src/hm/: DataFlash.cpp  DataFlash.h  HM_StarterKit.cpp  HM_StarterKit.h  LICENSE  adjust.cpp  adjust.h  fast.cpp  fast.h  glob_var.h  init.cpp  init.h  interface.cpp  interface.h  interrupt.cpp  interrupt.h  misc.cpp  misc.h  mytypedef.h  parameters.h  run.cpp  run.h  sci.h  search.cpp  search.h  static_parameters.h
src/rtos/: queue.h  task.h
src/ui/: shell.cpp  shell.h  shell.hpp
