idf_component_register(SRCS
        "ntshell/src/lib/core/ntlibc.c"
        "ntshell/src/lib/core/ntshell.c"
        "ntshell/src/lib/core/text_editor.c"
        "ntshell/src/lib/core/text_history.c"
        "ntshell/src/lib/core/vtrecv.c"
        "ntshell/src/lib/core/vtsend.c"
        "ntshell/src/lib/util/ntopt.c"
        "ntshell/src/lib/util/ntstdio.c"
        INCLUDE_DIRS
        "ntshell/src/lib/core"
        "ntshell/src/lib/util")